--- a/PdfToAlto copia/pom.xml
+++ b/PdfToAlto copia/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.madeworld.pdftoalto</groupId>
   <artifactId>PdfToAlto</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
 
   <dependencies>
   	<dependency>
@@ -13,4 +13,30 @@
   		<version>2.0.24</version>
   	</dependency>
   </dependencies>
+    <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
+  <repositories>
+		<repository>
+			<id>mvn-bncf</id>
+			<url>http://maven.bncf.firenze.sbn.it/repository/maven-public/</url>
+		</repository>
+	</repositories>
+
+  <distributionManagement>
+    <repository>
+      <id>mvn-bncf</id>
+      <name>Maven BNCF-releases</name>
+      <url>http://maven.bncf.firenze.sbn.it/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>Maven BNCF-Snapshot</name>
+      <url>http://maven.bncf.firenze.sbn.it/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
